# bronze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grub.cfg  mkiso.sh  sanity_checks.sh
i686-elf/: CMakeLists.txt  grub.cfg  mkiso.sh  sanity_checks.sh
i686-elf/src/: boot.asm  kmain.cc
src/kernel/arch/i686/: boot.asm  crti.asm  crtn.asm
src/kernel/include/kernel/: tty.h
src/kernel/kernel/: kmain.cc  tty.cc
